# fullstack-monorepo-template

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  docker-compose.e2e.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: e2e.yml  on_pull_request.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9241a2ea0ef7_initialize_tables.py
backend/api/: database.py  enums.py  exceptions.py  main.py  settings.py
backend/api/crud/: core.py  text.py
backend/api/domain/: core.py  text.py
backend/api/models/: text.py
backend/api/routers/: health.py  text.py
backend/api/schemas/: core.py  text.py
backend/api/services/: text.py
backend/api/tests/: conftest.py
backend/api/tests/test_crud/: test_texts.py
backend/api/tests/test_routers/: conftest.py  test_texts.py
backend/api/tests/test_services/: test_trips.py
backend/dev/: seed_data.py
backend/dev/data/: texts.json
backend/scripts/: migrate.sh  startup-dev.sh  startup.sh
e2e/: playwright.config.ci.ts
e2e/pages/: ListingTextsPage.ts
e2e/tests/texts/: listing-texts.spec.ts
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  types.ts
frontend/src/api/: index.ts
frontend/src/api/backend/: api.ts  base.ts  common.ts  configuration.ts
frontend/src/components/CustomPagination/: CustomPagination.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/routes/: __root.tsx
traefik/: dynamic.yml  traefik.yml
(+10 files in other folders)
