[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.12"}
pylint = "^3.3.7"
openai = "^1.78.1"
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
asyncpg = "^0.30.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
greenlet = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.3.0"


[tool.black]
line-length = 120

[tool.pylint]
max-line-length = 120

[tool.pylint.messages_control]
disable = ["unnecessary-pass", "too-few-public-methods", "not-callable", "missing-module-docstring", "fixme"]
